Know the overflow is not hidden which I will correct

--- a/src/Components/Styles/Common.module.css
+++ b/src/Components/Styles/Common.module.css
@@ -11,6 +11,7 @@ least for 2 page */
     background-color: #f9f9f9;
     color:black;
     font-family: "Arial GEO";
+    box-sizing: border-box;
 }
 
 .flexRow, .mobileContainer, .emailContainer {
